<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="5"
    android:orientation="vertical"
    android:background="#FCD969">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:weightSum="5"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"/>

        <ImageView
            android:layout_weight="1.4"
            android:layout_width="@dimen/img_width_height"
            android:layout_height="0dp"
            android:background="@drawable/artwork" />

        <View
            android:layout_width="match_parent"
            android:layout_weight="0.2"
            android:layout_height="0dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:gravity="center"
            android:text="@string/notifications"
            android:textColor="@color/textcolor"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:paddingLeft="@dimen/desc_padding"
            android:paddingRight="@dimen/desc_padding"
            android:text="@string/notificatoins_subtext"
            android:textAlignment="center"
            android:textColor="#1F2045"
            android:textSize="@dimen/slide_desc" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"/>
        <TextView
            android:layout_width="110dp"
            android:layout_height="0dp"
            android:layout_weight="0.33"
            android:id="@+id/read_btn"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@drawable/allowbutton"
            android:layout_marginBottom="16dp"


            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.45">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/skip"
                android:textColor="@color/textcolorforget"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.62"/>


    </LinearLayout>


</LinearLayout>