<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/profilebackground"
    android:layout_height="match_parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:fitsSystemWindows="true"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/main.appbar"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/main.collapsing"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="@color/profilebackground"
                app:expandedTitleMarginEnd="64dp"
                app:expandedTitleMarginStart="48dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/main.toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin">

                </androidx.appcompat.widget.Toolbar>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    //0.2

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="30dp" />

                    //0.4

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:orientation="horizontal"
                        android:weightSum="3">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.2" />


                        <ImageView
                            android:id="@+id/image"
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:layout_weight="0.3"
                            android:background="@drawable/back_btn"
                            android:gravity="center" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="2.5"
                            android:gravity="center">

                            <com.teachingchild.teachingautisticchild.customfont.MyTextView_HK_Grotesk_Display_Regular
                                android:id="@+id/name"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:layout_marginRight="48dip"
                                android:gravity="center"
                                android:text="Basic Informations"
                                android:textColor="@color/title"
                                android:textSize="14sp"
                                android:textStyle="normal" />
                        </LinearLayout>

                    </LinearLayout>

                    //1

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/head"
                            android:textColor="@color/textcolor"
                            android:textSize="20dip"></TextView>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal">


                        </LinearLayout>


                    </LinearLayout>
                    //0.4

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="10dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal">

                        <View
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.2" />

                        <TextView
                            android:id="@+id/foodListTxt"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.786"
                            android:background="@drawable/all"
                            android:gravity="center"
                            android:textColor="@color/textcolor"
                            android:text="Food List" />

                        <View
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.02" />

                        <TextView
                            android:id="@+id/doctorTxt"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.786"
                            android:background="@drawable/studying"
                            android:textColor="@color/textcolor"
                            android:gravity="center"
                            android:text="Doctor Advices" />

                        <View
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.02" />

                        <TextView
                            android:id="@+id/problemandsolutionTxt"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.786"
                            android:background="@drawable/saved"
                            android:textColor="@color/textcolor"
                            android:gravity="center"
                            android:text="Problem and Solution" />

                        <View
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.2" />

                    </LinearLayout>
                </LinearLayout>


            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"/>

                <LinearLayout
                    android:id="@+id/imageLinearLayout"
                    android:layout_width="match_parent"
                    android:background="@drawable/rounded_corner"
                    android:layout_marginLeft="25dip"
                    android:layout_marginRight="25dip"
                    android:layout_height="120dp">

                    <ImageView
                        android:id="@id/imageView"
                        android:src="@drawable/study"
                        android:scaleType="fitXY"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                </LinearLayout>

                <View
                    android:id="@+id/view2"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"/>


                <LinearLayout
                    android:id="@+id/linearLayout1"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">

                    <com.teachingchild.teachingautisticchild.customfont.MyTextView_HK_Grotesk_Display_Bold
                        android:id="@+id/foodlist1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="22sp"
                        android:textColor="@color/textcolor"
                        android:layout_marginLeft="25dip"
                        android:layout_marginRight="25dip"
                        android:text="Introduction"/>

                    <me.biubiubiu.justifytext.library.JustifyTextView
                        android:id="@+id/foodlist1description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:layout_marginTop="5dip"
                        android:textColor="@color/subtextcolor"
                        android:layout_marginLeft="25dip"
                        android:layout_marginRight="25dip"
                        android:text="@string/subtextcourse"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_marginTop="15dip"
                    android:layout_height="wrap_content">

                    <com.teachingchild.teachingautisticchild.customfont.MyTextView_HK_Grotesk_Display_Bold
                        android:id="@+id/foodlist2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dip"
                        android:textSize="22sp"
                        android:textColor="@color/textcolor"
                        android:layout_marginLeft="25dip"
                        android:layout_marginRight="25dip"
                        android:text="The Scientific Method"/>

                    <me.biubiubiu.justifytext.library.JustifyTextView
                        android:id="@+id/foodlist2description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dip"
                        android:layout_marginTop="5dip"
                        android:layout_marginRight="25dip"
                        android:text="@string/study_sub"
                        android:textColor="@color/subtextcolor"
                        android:textSize="18sp" />

                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="match_parent"
                    app:cardElevation="0dp"
                    android:elevation="0dp"
                    android:layout_marginTop="15dip"
                    app:cardCornerRadius="12dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginStart="25dp"
                    android:layout_height="wrap_content">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycleView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    </androidx.recyclerview.widget.RecyclerView>
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_marginTop="15dip"
                    android:layout_height="wrap_content">

                    <com.teachingchild.teachingautisticchild.customfont.MyTextView_HK_Grotesk_Display_Bold
                        android:id="@+id/foodlist3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dip"
                        android:textSize="22sp"
                        android:textColor="@color/textcolor"
                        android:layout_marginLeft="25dip"
                        android:layout_marginRight="25dip"
                        android:text="Scientific Method Example:"/>

                    <me.biubiubiu.justifytext.library.JustifyTextView
                        android:id="@+id/foodlist3description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:layout_marginTop="5dip"
                        android:textColor="@color/subtextcolor"
                        android:layout_marginLeft="25dip"
                        android:layout_marginRight="25dip"
                        android:text="@string/subtxt"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout4"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_marginTop="15dip"
                    android:layout_height="wrap_content">

                    <com.teachingchild.teachingautisticchild.customfont.MyTextView_HK_Grotesk_Display_Bold
                        android:id="@+id/foodlist4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dip"
                        android:textSize="22sp"
                        android:textColor="@color/textcolor"
                        android:layout_marginLeft="25dip"
                        android:layout_marginRight="25dip"
                        android:text="Scientific Method Example:"/>

                    <me.biubiubiu.justifytext.library.JustifyTextView
                        android:id="@+id/foodlist4description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:layout_marginTop="5dip"
                        android:textColor="@color/subtextcolor"
                        android:layout_marginLeft="25dip"
                        android:layout_marginRight="25dip"
                        android:text="@string/subtxt"/>

                </LinearLayout>


                <View
                    android:id="@+id/view3"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycleViewDoctor"
                    android:layout_marginTop="15dip"
                    android:layout_marginLeft="20dip"
                    android:layout_marginRight="20dip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </androidx.recyclerview.widget.RecyclerView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycleViewProblemAndSolution"
                    android:layout_marginLeft="20dip"
                    android:layout_marginRight="20dip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </androidx.recyclerview.widget.RecyclerView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="30dp"/>

            </LinearLayout>



        </androidx.core.widget.NestedScrollView>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>



</RelativeLayout>